added datas of assessment

--- a/registration.html
+++ b/registration.html
@@ -121,7 +121,7 @@
 </head>
 <body>
   <div class="container">
-    <h2>Create Your Cute Account 🌸</h2>
+    <h2>Create Your Account 🌸</h2>
     <form id="registerForm">
       <input type="text" id="fullName" placeholder="Full Name" required>
       <input type="text" id="regUsername" placeholder="Username" required>
@@ -182,3 +182,4 @@
   </script>
 </body>
 </html>
+
