added datas of assessment

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome | User Portal</title>
+  <title>Welcome </title>
   <style>
     body {
       margin: 0;
@@ -88,7 +88,7 @@
 <body>
 
   <div class="container">
-    <h1>Welcome to Our Portal 🌟</h1>
+    <h1>Welcome to Our Page 🌟</h1>
     <p style="color: black;">Manage your account, register as a new user, or login to explore your dashboard.</p>
     <a href="login.html" class="btn">Login</a>
     <a href="registration.html" class="btn">Register</a>
@@ -100,3 +100,4 @@
 
 </body>
 </html>
+
