added datas of assessment

--- a/welcome.html
+++ b/welcome.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Welcome | Cute Portal</title>
+  <title>Welcome</title>
   <style>
 
     body {
@@ -103,8 +103,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>Welcome to Our Cute Portal 🌸✨</h1>
-    <p>Register as a new user or login to explore your dashboard with fun and pastel vibes!</p>
+    <h1>Welcome to Our Page 🌸✨</h1>
+    <p>Register as a new user or login to explore your dashboard </p>
     <a href="login.html" class="btn">Login</a>
     <a href="registration.html" class="btn">Register</a>
   </div>
@@ -114,4 +114,3 @@
   </footer>
 </body>
 </html>
-S
